# mllearn

gemma/: README.md  main.py  pyproject.toml  requirements.txt
nn/: README.md  pyproject.toml
nn/src/nn/: __init__.py  p1firstnn.py  p2mnist.py  p3simplenet.py  p42lnet.py  p52lnet.py  zlayer.py  zopt.py  zutils.py
nn/src/nn/dataset/: mnist.py
nn2/: .gitignore  README.md  pyproject.toml
nn2/src/nn2/: __init__.py  p1count.py  p2ptb.py  p3cbow.py  p4cbow.py  p5cbow2.py  zcbow.py  zembdding.py  zlayer.py  zoptimizer.py  zptb.py  zutil.py
nn2/src/trainer/: np.py  trainer.py
pr1/: README.md  pyproject.toml
pr1/src/pr1/: __init__.py
pr1/src/pr1/hello/: __init__.py
pr1/src/pr1/token/: __init__.py
transformer/: .gitignore  README.md  pyproject.toml
transformer/src/layers/: Decoder.py  Embedding.py  Encoder.py  FFN.py  MultiHeadAttention.py  PositionalEncoding.py  ScaledDotProductAttention.py
transformer/src/transformer/: __init__.py  dataset.py  evaluation.py  path.py  predict.py  text.py  trainer.py  transformer.py
