[project]
name = "gemma"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "rerorero", email = "nato9598@hotmail.co.jp" }
]
dependencies = [
    "transformers>=4.38.1",
    "datasets>=2.17.1",
    "loralib>=0.1.2",
    "sentencepiece>=0.2.0",
    "bitsandbytes>=0.42.0",
    "xformers>=0.0.24",
    "einops>=0.7.0",
    "hf_transfer>=0.1.5",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "torchaudio>=2.2.0",
    "accelerate>=0.27.2",
]
readme = "README.md"
requires-python = ">= 3.11"

[project.scripts]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/gemma"]

[sources]
name = "pytorch-cuda-121"
url = "https://download.pytorch.org/whl/cu121"
type = "index"
