[project]
name = "nn"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "rerorero", email = "nato9598@hotmail.co.jp" }
]
dependencies = [
    "numpy>=1.26.3",
    "matplotlib>=3.8.2",
    "Pillow>=10.2.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[project.scripts]
hello = "nn:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pynvim>=0.5.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/nn"]
